Fix broken css

--- a/landlingpage.css
+++ b/landlingpage.css
@@ -1,38 +1,17 @@
-.Boxes{
-    display: flex;
+#Boxes{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    width: auto;
 }
 
 .box{
-    box-sizing: border-box;
-    float: left;
+    overflow: hidden;
     margin: 1% 1%;
     padding: 2px 2px;
-    width: 22%;
-    min-height: 300px;
     border: 2px solid white;
     border-radius: 10px;
+    width: auto;
 }
-
-.box *{
-    width: 100%;
-    height: 100%;
-}
-
-.box h2{
-    font-size: 2em;
-}
-
-.box p{
-    color: white;
-    padding-bottom: 4px;
-}
-
-.box a{
-    text-decoration: none;
-}
-
-@media (max-width: 830px) {
-    .box{
-        width: 98%;
-    }
+.box img{
+    max-width: 100%;
 }
